--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - pip=24.0
   - pip:
     - langchain==0.2.6
-    - langchain-openai=0.1.14
+    - langchain-openai==0.1.14
     - numpy==1.26.4
     - matplotlib==3.9.0
     - onnx==1.16.1
