--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,9 @@ dependencies:
     - matplotlib==3.9.0
     - onnx==1.16.1
     - onnxruntime==1.18.0
-    - openai==1.35.10
     - opencv-python==4.10.0.82
     - tensorflow==2.15.0
     - pandas==2.2.2
     - path==16.14.0
     - seaborn==0.13.2
+    - streamlit==1.36.0
